--- a/Vib17/Properties/launchSettings.json
+++ b/Vib17/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:52844/"
+      "applicationUrl": "https://localhost:44375/"
     }
   }
 }
